# eyrc23_hb_1520

./: .gitignore  README.md  modified
arduino codes/micro_ros_subscriber_wifi/: micro_ros_subscriber_wifi.ino
hb_task1a_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task1a_ws/log/: latest_build
hb_task1a_ws/src/hb_task_1a/: setup.py
hb_task1a_ws/src/hb_task_1a/hb_task_1a/: aaise_hi.py
hb_task1b_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hb_task1b_ws/log/: latest_build
hb_task1b_ws/src/hb_task_1b/: package.xml  setup.py
hb_task1b_ws/src/hb_task_1b/hb_task_1b/: controller bohooot kuch.py  controller.py  service_node.py
hb_task1b_ws/src/hb_task_1b/urdf/: hb_bot.urdf.xacro
hb_task_1_ws/hb_task1a_ws/install/: local_setup.sh  setup.sh
hb_task_1_ws/hb_task1a_ws/log/: latest_build
hb_task_1_ws/hb_task1a_ws/src/hb_task_1a/: setup.py
hb_task_1_ws/hb_task1b_ws/install/: local_setup.sh  setup.sh
hb_task_1_ws/hb_task1b_ws/log/: latest_build
hb_task_1_ws/hb_task1b_ws/src/hb_task_1b/: .setup.py.swp
hb_task_2_ws/install/: local_setup.sh  setup.sh
hb_task_2_ws/log/: latest_build
hb_task_2_ws/src/eYRC-2023_Hologlyph_Bots/hb_bot/: CMakeLists.txt
hb_task_2_ws/src/eYRC-2023_Hologlyph_Bots/hb_task2a/: package.xml  setup.py
hb_task_2_ws/src/eYRC-2023_Hologlyph_Bots/hb_task2b/: package.xml  setup.py
hb_task_2_ws/src/eYRC-2023_Hologlyph_Bots/hb_world/: CMakeLists.txt
hb_task_4_ws/src/hb_task4c/: package.xml  setup.py
hb_task_4_ws/src/hb_task4c/hb_task4c/: bot_controller1.py  bot_controller2.py  (+5 more)
(+443 files in other folders)
